More fixes to redirect after editing

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -42,7 +42,7 @@
                 <input type="text" id="image" name="seeds[image]"value=<%=seeds.image%>>
             </div>
     
-            <button> Add Seed</button>
+            <button> Submit changes</button>
             </form>
         
         <script src="" async defer></script>
