--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,6 +11,10 @@
 <body>
     <nav>
         <h4>Seed Management</h4>
+        <ul>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/">Login</a></li>
+        </ul>
     </nav>
     
     <div class="container mt-4">
