--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,9 @@
     <nav>
         <h4>Seed Management</h4>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+            <li><a href="/">Login</a></li>
+            <li><a href="/addSeeds">Add Seeds</a></li>
         </ul>
     </nav>
 
