--- a/views/addseeds.ejs
+++ b/views/addseeds.ejs
@@ -29,7 +29,7 @@
             <input type="number" id="weight" name="seeds[weight]">
         </div>
         <div>
-            <label for="title">Time to Harvest</label>
+            <label for="title">Time to Harvest (months)</label>
             <input type="number" id="timeToHarvest" name="seeds[timeToHarvest]">
         </div>
         <div>
