--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -17,7 +17,7 @@
             <h1>Dashboard</h1>
            
             <div class="navbar-nav ml-auto">
-                <a class="nav-link" href="/addSeeds">Add Seeds</a>
+                <a class="nav-link" href="/register">Add a New User</a>
                 <a class="nav-link" href="/dashboard">dashboard</a>
                 <a class="nav-link" href="/logout">logout</a>
             </div>
