--- a/views/notifyreport.ejs
+++ b/views/notifyreport.ejs
@@ -23,15 +23,14 @@
                 <a class="nav-link" href="/userlist">User list</a>
                 <a class="nav-link" href="/wastedreport">Wasted Report</a>
                 <a class="nav-link" href="/plantedreport">Planted Report</a>
-                <a class="nav-link" href="/notifyreport">Notification Report</a>
                 <a class="nav-link" href="/logout">logout</a>
             </div>
         </nav>
         <ul>
             <h1>Current Inventory</h1>
-            <% for(let seedInventory of seeds) {%>
+            <% for(let seedInventory of leaderboard) {%>
                 <li>
-                    <a href="/dashboard/<%=seedInventory._id %>"><%= seedInventory.name %></a>
+                    <%= seedInventory.name %> Weight = <%= seedInventory.weight %>
                 </li> 
                 
                 <% } %>      
